# todo_term

./: CMakeLists.txt  LICENSE  README.md  db.cpp  db.hpp  main.cpp  tasks.db
src/: App.cpp  App.hpp  db.cpp  db.hpp  main.cpp  tasks.db  tui.cpp  tui.hpp
